# domainsale

./: .user_config.env  LICENSE  Makefile  POETRY_GUIDE.md  README.md  app.py  feedback.md  pyproject.toml  pyrightconfig.json  requirements.txt  rfc.txt  run.py  setup.py
.github/workflows/: docker-image.yml  python-package.yml
RAG-Scraper/: .gitignore  Dockerfile  README.md  app.py  requirements.txt
RAG-Scraper/.git_disabled/: config  index  packed-refs
RAG-Scraper/.git_disabled/refs/heads/: main
RAG-Scraper/rag_scraper/: cli.py  link_extractor.py
domainsale/: __init__.py  api.py  cache.py  cli.py  exceptions.py  rdap.py  renderer.py  resolver.py  validator.py
domainsale/tests/: __init__.py  test_validator.py
examples/: DOCKER_README.md  Dockerfile  basic_usage.py  create_txt_record.py  docker-compose.yml  install_and_use.py  web_server.py
